Fix instagram image width on mobile

--- a/static/css/sjtfl.css
+++ b/static/css/sjtfl.css
@@ -858,6 +858,10 @@ h1 .btn {
   width: 60%;
 }
 
+.carousel-inner img {
+  width: 60%;
+}
+
 .link-wrapper {
   padding: 6px;
   border-bottom: 1px solid #d2d2d2;
@@ -1248,6 +1252,9 @@ h1 .dropdown:first-child {
     width: 100%;
   }
   .carousel-inner video {
+    width:100%;
+  }
+  .carousel-inner img {
     width:100%;
   }
   .home-header.highlights {
